Make Start free trial header smaller on mobile. Fixes #9

--- a/sass/feature4.scss
+++ b/sass/feature4.scss
@@ -308,6 +308,12 @@
 			}
 		}
 	}
+
+	.sf-tour{
+		h1{
+			font-size: 38px !important;
+		}
+	}
 }
 
 @media (min-width: $md-screen) {
